[package]
name = "hirkn"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
debug = 0
debug-assertions = false
strip = true

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
clap = { version = "4.3.4", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
ipnet = "2.7.2"
nftables = "0.2.2"
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
url = { version = "2.4.0", features = ["serde"] }
