[package]
name = "hirkn"
version = "0.2.0"
authors = ["danpashin"]
edition = "2021"
rust-version = "1.70"
description = "OpenWRT rkn block sets auto-updater"
readme = "README.md"
license = "MIT"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
debug = 0
debug-assertions = false
strip = true

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
clap = { version = "4.4.8", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
ipnet = "2.9.0"
nftables = "0.2.4"
reqwest = "0.11.22"
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-shutdown = { version = "0.1.4", default-features = false }
url = { version = "2.4.1", features = ["serde"] }
chrono = { version = "0.4.31", default-features = false }
itertools = "0.12.0"
log = { version = "0.4.20", default-features = false, features = ["serde"] }
simple_logger = { version = "4.2.0", default-features = false }
humantime-serde = "1.1.1"
